--- a/glozzom/index.html
+++ b/glozzom/index.html
@@ -197,7 +197,7 @@
             <img src="./img/gallery1.jpg" alt="" class="img-fluid">
           </a>
         </div>
-        <div class="col-md-4">
+        <div class="col-md-4 ">
           <a href="./img/gallery2.jpg" data-toggle="lightbox" data-gallery="img-gallery" data-height='560' data-width='560'>
             <img src="./img/gallery2.jpg" alt="" class="img-fluid">
           </a>
@@ -227,7 +227,36 @@
       </div>
     </div>
   </section>
-  <img src="https://unsplash.com/photos/lam1HEFdBm8" alt="">
+  <!-- NEWSLETTER -->
+
+  <section id="newsletter" class="bg-dark text-light text-center py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h2>Sign Up For Our Newsletter</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate nihil, beatae suscipit cum quod error.</p>
+            <form action="" class="form-inline justify-content-center">
+              <input type="text" class="form-control m-2" placeholder="Name ">
+              <input type="email" class="form-control m-2" placeholder="Email ">
+              <button class="btn btn-primary m-2">Submit</button>
+            </form>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!--  FOOTER -->
+  <footer id="main-footer" class="text-center p-3">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p>Glozzom - Copyright&copy;
+            <span id="year"></span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <script src=" https://code.jquery.com/jquery-3.3.1.min.js " integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
     crossorigin=" anonymous "></script>
@@ -235,7 +264,7 @@
     crossorigin="anonymous "></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js " integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl "
     crossorigin="anonymous "></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.min.js "></script>
 
   <script>
     // get current year for copyright
@@ -249,10 +278,10 @@
     // Video Play
     $(function () {
       // Auto play modal video
-      $(".video").click(function () {
-        var theModal = $(this).data("target"),
-          videoSRC = $(this).attr("data-video"),
-          videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1";
+      $(".video ").click(function () {
+        var theModal = $(this).data("target "),
+          videoSRC = $(this).attr("data-video "),
+          videoSRCauto = videoSRC + "?modestbranding=1&rel=0&controls=0&showinfo=0&html5=1&autoplay=1 ";
         $(theModal + ' iframe').attr('src', videoSRCauto);
         $(theModal + ' button.close').click(function () {
           $(theModal + ' iframe').attr('src', videoSRC);
@@ -264,7 +293,7 @@
     });
 
     // light-box setup
-    $(document).on('click', '[data-toggle="lightbox"]', function (event) {
+    $(document).on('click', '[data-toggle="lightbox "]', function (event) {
       event.preventDefault();
       $(this).ekkoLightbox();
     });
