--- a/blog-cms/index.html
+++ b/blog-cms/index.html
@@ -30,13 +30,13 @@
             <a href="index.html" class="nav-link active"> Dashboard</a>
           </li>
           <li class="nav-item px-2">
-            <a href="post.html" class="nav-link active"> Post</a>
+            <a href="posts.html" class="nav-link "> Post</a>
           </li>
           <li class="nav-item px-2">
-            <a href="categories.html" class="nav-link active"> Categories</a>
+            <a href="categories.html" class="nav-link "> Categories</a>
           </li>
           <li class="nav-item px-2">
-            <a href="users.html" class="nav-link active"> Users</a>
+            <a href="users.html" class="nav-link "> Users</a>
           </li>
         </ul>
 
@@ -104,6 +104,151 @@
       </div>
     </div>
   </section>
+
+
+
+
+
+  <!-- POSTS -->
+  <section id="posts">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-9">
+          <div class="card">
+            <div class="card-header">
+              <h4>Latest Posts</h4>
+              <table class="table table-striped">
+                <thead class="thead-dark">
+                  <tr>
+                    <th>#</th>
+                    <th>Title</th>
+                    <th>Category</th>
+                    <th>Date</th>
+                    <th>Link</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>1</td>
+                    <td>Post One</td>
+                    <td>Web Development</td>
+                    <td>May 10 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>2</td>
+                    <td>Post Two</td>
+                    <td>Tech Gadgets</td>
+                    <td>May 11 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>3</td>
+                    <td>Post Three</td>
+                    <td>Web Development</td>
+                    <td>May 13 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>4</td>
+                    <td>Post Four</td>
+                    <td>Business</td>
+                    <td>May 15 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>5</td>
+                    <td>Post Five</td>
+                    <td>Web Development</td>
+                    <td>May 17 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>6</td>
+                    <td>Post Six</td>
+                    <td>Health & Wellness</td>
+                    <td>May 20 2018</td>
+                    <td>
+                      <a href="details.html" class="btn btn-secondary">
+                        <i class="fas fa-angle-double-right"></i> Details
+                      </a>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3">
+          <div class="card text-center bg-primary mb-3 text-white">
+            <div class="card-body">
+              <h3>Posts</h3>
+              <h4 class="display-4">
+                <i class="fas fa-pencil-alt pl-2"></i> 6
+              </h4>
+              <a href="" class="btn btn-outline-light btn-sm">View</a>
+            </div>
+          </div>
+          <div class="card text-center bg-success mb-3 text-white">
+            <div class="card-body">
+              <h3>Categories</h3>
+              <h4 class="display-4">
+                <i class="fas fa-folder pl-2"></i> 7
+              </h4>
+              <a href="" class="btn btn-outline-light btn-sm">View</a>
+            </div>
+          </div>
+
+          <div class="card text-center bg-warning mb-3 text-white">
+            <div class="card-body">
+              <h3>Users</h3>
+              <h4 class="display-4">
+                <i class="fas fa-users pl-2"></i> 50
+              </h4>
+              <a href="" class="btn btn-outline-light btn-sm">View</a>
+            </div>
+          </div>
+
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER -->
+
+  <footer class="bg-dark text-white mt-3 py-2" id="main-footer">
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <p class="lead text-center">
+            Copyright &copy;
+            <span id="year"></span>
+          </p>
+        </div>
+      </div>
+    </div>
+  </footer>
 
   <!-- MODALS  -->
 
