styles changed to scss

--- a/natureCamp/index.html
+++ b/natureCamp/index.html
@@ -16,16 +16,16 @@
 </head>
 
 <body>
-    <header>
-        <div class="logo-box">
-            <img src="./img/logo-white.png" alt="logo-image">
+    <header class="header">
+        <div class="header__logo-box">
+            <img class="header__logo" src="./img/logo-white.png" alt="logo-image">
         </div>
-        <div class="text-box">
-            <h1 class="main-heading">
-                <span class="main-heading_primary">outdoors</span>
-                <span class="main-heading_secondary">is where life happens</span>
+        <div class="header__text-box">
+            <h1 class="header__main-heading">
+                <span class="header__main-heading--pri">outdoors</span>
+                <span class="header__main-heading--sub">is where life happens</span>
             </h1>
-            <a href="#" class="btn btn-white btn-animated">know more</a>
+            <a href="#" class="btn btn--white btn--animated">know more</a>
         </div>
     </header>
 
