composition section complete

--- a/natureCamp/index.html
+++ b/natureCamp/index.html
@@ -21,13 +21,83 @@
             <img class="header__logo" src="./img/logo-white.png" alt="logo-image">
         </div>
         <div class="header__text-box">
-            <h1 class="header__main-heading">
-                <span class="header__main-heading--pri">outdoors</span>
-                <span class="header__main-heading--sub">is where life happens</span>
+            <h1 class="heading-primary">
+                <span class="heading-primary--main">outdoors</span>
+                <span class="heading-primary--sub">is where life happens</span>
             </h1>
             <a href="#" class="btn btn--white btn--animated">know more</a>
         </div>
     </header>
+
+    <main>
+        <section class="section-about ">
+            <div class="u-text-center u-margin-bottom-5">
+                <h2 class="heading-secondary">
+                    exciting tours for adventurous people
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-2 col">
+                    <h3 class="heading-tertiary u-margin-bottom-1">Lorem ipsum dolor sit amet.</h3>
+                    <p class="paragraph">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cum fugiat suscipit quis molestiae nostrum
+                        vitae Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eum, corrupti.
+                    </p>
+                    <h3 class="heading-tertiary u-margin-bottom-1">Lorem ipsum dolor sit amet.</h3>
+                    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam totam praesentium harum enim, nihil.
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo, reiciendis.
+                    </p>
+                    <br>
+                    <a href="" class="btn-text">Learn More &rarr;</a>
+                </div>
+                <div class="col-1-of-2 col">
+                    <div class="composition">
+                        <img src="img/nat-1-large.jpg" alt="photo-1" class="composition__photo composition__photo--p1">
+                        <img src="img/nat-2-large.jpg" alt="photo-2" class="composition__photo composition__photo--p2">
+                        <img src="img/nat-3-large.jpg" alt="photo-3" class="composition__photo composition__photo--p3">
+                    </div>
+                </div>
+            </div>
+
+        </section>
+    </main>
+
+
+
+
+
+
+
+    <!-- <div class="grid-test">
+        <div class="row">
+            <div class="col-1-of-2 col"> col 1 of 2</div>
+            <div class="col-1-of-2 col"> col 1 of 2</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3 col"> col 1 of 3</div>
+            <div class="col-1-of-3 col"> col 1 of 3</div>
+            <div class="col-1-of-3 col"> col 1 of 3</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-3 col"> col 1 of 3</div>
+            <div class="col-2-of-3 col"> col 2 of 3</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-2-of-4 col"> col 2 of 4</div>
+        </div>
+        <div class="row">
+            <div class="col-1-of-4 col"> col 1 of 4</div>
+            <div class="col-3-of-4 col"> col 3 of 4</div>
+        </div>
+
+    </div> -->
 
 </body>
 
