--- a/natureCamp/index.html
+++ b/natureCamp/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
 
-    <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
+    <link rel="stylesheet" href="css/icon-font.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
@@ -59,6 +59,51 @@
             </div>
 
         </section>
+
+        <section class="section-features">
+            <div class="row">
+                <div class=" col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-world"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-1">explore the world</h3>
+                        <p class="feature-box__text paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores nobis consequatur enim quibusdam
+                            necessitatibus molestiae?
+                        </p>
+                    </div>
+                </div>
+                <div class=" col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-compass"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-1">Meet the nature</h3>
+                        <p class="feature-box__text paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores nobis consequatur enim quibusdam
+                            necessitatibus molestiae?
+                        </p>
+                    </div>
+                </div>
+                <div class=" col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-map"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-1">find your way</h3>
+                        <p class="feature-box__text paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores nobis consequatur enim quibusdam
+                            necessitatibus molestiae?
+                        </p>
+                    </div>
+                </div>
+                <div class=" col-1-of-4">
+                    <div class="feature-box">
+                        <i class="feature-box__icon icon-basic-heart"></i>
+                        <h3 class="heading-tertiary u-margin-bottom-1">Live healthy life</h3>
+                        <p class="feature-box__text paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Maiores nobis consequatur enim quibusdam
+                            necessitatibus molestiae?
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+
+
+        </section>
+
     </main>
 
 
