--- a/natureCamp/index.html
+++ b/natureCamp/index.html
@@ -98,10 +98,108 @@
                         </p>
                     </div>
                 </div>
-
             </div>
+        </section>
 
-
+        <!-- SECTION TOURS -->
+        <section class="section-tours u-text-center">
+            <div class="u-text-center u-margin-bottom-5">
+                <h2 class="heading-secondary">
+                    most popular tours
+                </h2>
+            </div>
+            <div class="row">
+                <div class="col-1-of-3">&nbsp;
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--1">&nbsp;</div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--1">
+                                    the sea explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>up to 30 people</li>
+                                    <li> 2 tour guides</li>
+                                    <li>sleep in cozy hotels</li>
+                                    <li>difficulty: easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-1">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="" class="btn btn--white">book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3 ">&nbsp;
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--2">&nbsp;</div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--2">
+                                    the sea explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>up to 30 people</li>
+                                    <li> 2 tour guides</li>
+                                    <li>stay in hotels</li>
+                                    <li>difficulty: easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-2">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="" class="btn btn--white">book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1-of-3 ">&nbsp;
+                    <div class="card">
+                        <div class="card__side card__side--front">
+                            <div class="card__picture card__picture--3">&nbsp;</div>
+                            <h4 class="card__heading">
+                                <span class="card__heading-span card__heading-span--3">
+                                    the sea explorer
+                                </span>
+                            </h4>
+                            <div class="card__details">
+                                <ul>
+                                    <li>3 day tour</li>
+                                    <li>up to 30 people</li>
+                                    <li> 2 tour guides</li>
+                                    <li>stay in hotels</li>
+                                    <li>difficulty: easy</li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--back card__side--back-3">
+                            <div class="card__cta">
+                                <div class="card__price-box">
+                                    <p class="card__price-only">only</p>
+                                    <p class="card__price-value">$297</p>
+                                </div>
+                                <a href="" class="btn btn--white">book now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
 
     </main>
